syntax = "proto3";

option csharp_namespace = "LkdinAdminServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc AddNumbers (AddRequest) returns (NumberResponse);
  rpc GiveMeUsers (UserRequest) returns (UserResponseList);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message AddRequest {
  int32 numberone = 1;
  int32 numbertwo = 2;
}

message NumberResponse {
  int32 result = 1;
}

message UserRequest {

}

message UserResponseList {
  repeated User users = 1;
}

message User {
  string name = 1;
  string address = 2;
  int32 age = 3;
}
